# Mazzotta_RT1_Lab2

./: .gitignore  README.md  launch_project.sh
install/: local_setup.sh  setup.sh
install/bme_gazebo_sensors/share/bme_gazebo_sensors/: package.sh
install/bme_gazebo_sensors/share/bme_gazebo_sensors/launch/: spawn_robot.launch.py
install/rt1_assignment2/include/rt1_assignment2/rt1_assignment2/msg/: rosidl_typesupport_introspection_c__visibility_control.h
install/rt1_assignment2/include/rt1_assignment2/rt1_assignment2/msg/detail/: info__functions.h  info__rosidl_typesupport_fastrtps_c.h  info__struct.h  info__struct.hpp  info__traits.hpp  info__type_support.c  info__type_support.cpp
install/rt1_assignment2/include/rt1_assignment2/rt1_assignment2/srv/: set_threshold.hpp
install/rt1_assignment2/include/rt1_assignment2/rt1_assignment2/srv/detail/: get_avg_vel__builder.hpp  (+4 more)
install/rt1_assignment2/lib/rt1_assignment2/: user_interface
install/rt1_assignment2/share/rt1_assignment2/: local_setup.sh  package.dsv  package.sh  package.zsh
install/rt1_assignment2/share/rt1_assignment2/cmake/: ament_cmake_export_dependencies-extras.cmake  export_rt1_assignment2__rosidl_generator_cExport-noconfig.cmake  export_rt1_assignment2__rosidl_typesupport_fastrtps_cExport.cmake  export_rt1_assignment2__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake  rt1_assignment2__rosidl_typesupport_cExport-noconfig.cmake
install/rt1_assignment2/share/rt1_assignment2/launch/: assignment2.launch.py  launcher.py
install/rt1_assignment2/share/rt1_assignment2/msg/: Info.json
install/rt1_assignment2/share/rt1_assignment2/srv/: SetThreshold.srv
log/: latest_build
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/bme_gazebo_sensors/share/bme_gazebo_sensors/: package.sh
ros2_ws/install/rt1_assignment2/lib/rt1_assignment2/: custom_teleop  input_controller  user_interface
ros2_ws/install/rt1_assignment2/share/rt1_assignment2/: local_setup.dsv  local_setup.sh  package.bash  package.ps1  package.sh
ros2_ws/install/rt1_assignment2/share/rt1_assignment2/cmake/: ament_cmake_export_include_directories-extras.cmake  export_rt1_assignment2__rosidl_generator_cExport.cmake  export_rt1_assignment2__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_rt1_assignment2__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  rt1_assignment2__rosidl_typesupport_introspection_cExport-noconfig.cmake
ros2_ws/install/rt1_assignment2/share/rt1_assignment2/launch/: launcher.py
ros2_ws/install/rt1_assignment2/share/rt1_assignment2/msg/: Info.idl
ros2_ws/log/: latest_build
ros2_ws/src/: bme_gazebo_sensors
ros2_ws/src/rt1_assignment2/: CMakeLists.txt  README.md
ros2_ws/src/rt1_assignment2/launch/: assignment2.launch.py  launcher.py
ros2_ws/src/rt1_assignment2/scripts/: input_controller.py  test_service_connection.py  user_interface.py
ros2_ws/src/rt1_assignment2/src/: safety_controller.cpp
(+18 files in other folders)
